--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,43 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "6.5.1"
+    id 'io.freefair.lombok' version '6.5.1'
 }
 
 group 'ru.clevertec'
 version '1.0-SNAPSHOT'
 
 java {
+    toolchain.languageVersion = JavaLanguageVersion.of(17)
     sourceCompatibility = JavaLanguageVersion.of(17)
     targetCompatibility = JavaLanguageVersion.of(17)
 }
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
 }
 
 ext {
+    mapstructVersion = '1.5.5.Final'
     junitVersion = '5.9.2'
     mockitoVersion = '5.6.0'
+    assertjVersion = '3.24.2'
 }
 
 dependencies {
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    testImplementation "org.assertj:assertj-core:${assertjVersion}"
 }
 
 test {
